home section desing

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alpha bet Games</title>
     <!-- Daisy Ui  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.9.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
-<!-- CSS -->
-<link rel="stylesheet" href="style/style.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <main>
-        <section class="start">
 
+<body>
+    <main
+        class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center  flex items-center justify-center ">
+
+        <section class="start text-[#fff] flex flex-col items-center justify-center ">
+
+            <h1 class="text-[10rem]  font-anton ">ALPHABET CLASH</h1>
+            <p class=" text-[1.4rem] font-poppins -mt-8 ">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+            <!-- <button>Play Now</button> -->
+            <button class=" btn bg-white text-black mt-14">Play Now</button>
         </section>
 
         <section class="play-game">
@@ -26,4 +34,5 @@
         </section>
     </main>
 </body>
+
 </html>
