all section Html

--- a/index.html
+++ b/index.html
@@ -14,23 +14,97 @@
 </head>
 
 <body>
-    <main
-        class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center  flex items-center justify-center ">
-
-        <section class="start text-[#fff] flex flex-col items-center justify-center ">
-
-            <h1 class="text-[10rem]  font-anton ">ALPHABET CLASH</h1>
-            <p class=" text-[1.4rem] font-poppins -mt-8 ">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-            <!-- <button>Play Now</button> -->
-            <button class=" btn bg-white text-black mt-14">Play Now</button>
+    <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center  ">
+        <!-- home section -->
+        <section class="start  min-h-screen text-[#fff] flex items-center justify-center hidden  ">
+            <div class=" flex flex-col items-center ">
+                <h1 class="text-[10rem]  font-anton ">ALPHABET CLASH</h1>
+                <p class=" text-[1.4rem] font-poppins -mt-8 ">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <!-- <button>Play Now</button> -->
+                <button class=" btn bg-white text-black mt-14">Play Now</button>
+            </div>
         </section>
 
-        <section class="play-game">
 
+        <!-- paly game section start -->
+        <section class="play-game hidden">
+            <div class="flex flex-col  items-center gap-20 pt-20">
+                <!-- screen  -->
+                <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC]	bg-[#FFFFFFB3]">
+
+                    <div class="flex justify-center">
+                        <p class="bg-[#2F2941] text-white px-6 pb-4 rounded-b-xl	">Don't watch keyboard  while playing...</p>
+                    </div>   
+                    <div class="flex justify-center items-center h-full">
+                        <p class="text-black text-9xl font-bold">Y</p>
+                    </div> 
+                </div>
+
+                <!-- keyboard  -->
+                <div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">q</kbd>
+                        <kbd class="kbd">w</kbd>
+                        <kbd class="kbd">e</kbd>
+                        <kbd class="kbd">r</kbd>
+                        <kbd class="kbd">t</kbd>
+                        <kbd class="kbd">y</kbd>
+                        <kbd class="kbd">u</kbd>
+                        <kbd class="kbd">i</kbd>
+                        <kbd class="kbd">o</kbd>
+                        <kbd class="kbd">p</kbd>
+                    </div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">a</kbd>
+                        <kbd class="kbd">s</kbd>
+                        <kbd class="kbd">d</kbd>
+                        <kbd class="kbd">f</kbd>
+                        <kbd class="kbd">g</kbd>
+                        <kbd class="kbd">h</kbd>
+                        <kbd class="kbd">j</kbd>
+                        <kbd class="kbd">k</kbd>
+                        <kbd class="kbd">l</kbd>
+                    </div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">z</kbd>
+                        <kbd class="kbd">x</kbd>
+                        <kbd class="kbd">c</kbd>
+                        <kbd class="kbd">v</kbd>
+                        <kbd class="kbd">b</kbd>
+                        <kbd class="kbd">n</kbd>
+                        <kbd class="kbd">m</kbd>
+                        <kbd class="kbd">/</kbd>
+                    </div>
+                </div>
+                <!-- keyboard End -->
+
+
+                <!-- emoji  -->
+                <div class="flex justify-between  w-3/4">
+                    <button class="btn bg-[#894189] border-none rounded-[30px] text-white  px-8 text-2xl"> life
+                        <img src="images/Group 23.svg" alt=""> 
+                        <span>1</span>
+                    </button>
+                    <button class="btn bg-[#360490] border-none rounded-[30px] text-white px-8 text-2xl"> Score
+                        <img src="images/monetization_on.svg" alt=""> 
+                        <span>1</span>
+                    </button>
+                </div>
+            </div>
         </section>
+        <!-- paly game section end -->
 
-        <section class="score">
+        <!-- score -->
+        <section class="score flex justify-center items-center min-h-screen ">
 
+            <div class="text-white text-center space-y-8 bg-[#FFFFFF33] p-8 rounded-lg"> 
+                <h1 class="text-7xl">
+                    <span class=" font-bold">Score :</span>
+                    <span>14</span>
+                </h1>
+                <button class="btn">Play Agin</button>
+                <p>Practice will make you Pro</p>
+            </div>
         </section>
     </main>
 </body>
