--- a/index.html
+++ b/index.html
@@ -82,13 +82,15 @@
 
                 <!-- emoji  -->
                 <div class="flex justify-between  w-3/4">
+                     <!-- life button -->
                     <button class="btn bg-[#894189] border-none rounded-[30px] text-white  px-8 text-2xl"> life
                         <img src="images/Group 23.svg" alt=""> 
                         <span>1</span>
                     </button>
+                    <!-- score button -->
                     <button class="btn bg-[#360490] border-none rounded-[30px] text-white px-8 text-2xl"> Score
                         <img src="images/monetization_on.svg" alt=""> 
-                        <span>1</span>
+                        <span id="curnnet-score">0</span>
                     </button>
                 </div>
             </div>
