funtion us score update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- paly game section start -->
         <section id="play-game" class=" hidden">
-            <div class="flex flex-col  items-center gap-20 pt-20">
+            <div class="flex flex-col  items-center gap-5 pt-10">
                 <!-- screen  -->
                 <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC]	bg-[#FFFFFFB3]">
 
@@ -85,7 +85,7 @@
                      <!-- life button -->
                     <button class="btn bg-[#894189] border-none rounded-[30px] text-white  px-8 text-2xl"> life
                         <img src="images/Group 23.svg" alt=""> 
-                        <span>1</span>
+                        <span id="curnnet-life">5</span>
                     </button>
                     <!-- score button -->
                     <button class="btn bg-[#360490] border-none rounded-[30px] text-white px-8 text-2xl"> Score
